--- a/index.html
+++ b/index.html
@@ -52,9 +52,11 @@
             <button class="icon-button">
                 <i class="fas fa-bell"></i>
             </button>
-            <button class="icon-button">
+            <button type="button" class="icon-button" id="logoutBtn">
                 <i class="fas fa-user"></i>
             </button>
+
+
         </div>
     </header>
 
@@ -205,6 +207,8 @@
   <script src="assets/js/main.js"></script>
 
   <script src="profilepopup.js"></script>
+
+  <script src="logout_popup.js"></script>
 
 
 </body>
