Update faculty header background to solid color
Replaces the gradient background with a solid color for a
simpler and more consistent visual appearance in the
faculty section.

--- a/faculty.html
+++ b/faculty.html
@@ -16,7 +16,7 @@
         }
 
         .faculty-header {
-            background: linear-gradient(135deg, #667eea 0%, #764ba2 100%);
+            background: #D68B8B;
             color: white;
             padding: 20px;
             text-align: center;
